# template_ds

./: .dockerignore  .pylintrc  AGENTS.md  Makefile  README.md  docker-compose.yml  precommit.sh  pyproject.toml  test_ci_root.py
.claude/: settings.json
.claude/commands/: gh-cli.md  precommit.md
.claude/hooks/: precommit-guard.sh
.github/workflows/: ci.yml
docker/: Dockerfile
src/: test_ci_file.py
src/models/: break_test.py  temp.py  temp_model.py
src/utils/: logger.py
tests/: benchmark_logger.py  test_logger.py  test_logger_shared.py
