[tool.poetry]
name = "DS project"
version = "0.0.1"
description = ""
authors = ["Mikhail S. <fortis3000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.codestyle.dependencies]
ruff = "0.4.1"

[tool.ruff]
# Formatting
line-length = 100
exclude = [".pytest_cache", "**/__pycache__/", "**/*.ipynb_checkpoints/", "*.ipynb"]
# Linting
lint.extend-select = ["F", "I", "PL", "N"]
lint.extend-ignore = ["D", "E501", "PLR0913", "E402", "C403","F405", "E203","E731", "E712"]

[tool.ruff.lint.isort]
case-sensitive = true